[package]
name = "fzf-make"
version = "0.59.0"
edition = "2024"
authors = ["kyu08"]
description = "A command line tool that executes commands using fuzzy finder with preview window for make, pnpm, yarn and just."
license = "MIT"
repository = "https://github.com/kyu08/fzf-make"
exclude = [
  "/.devcontainer",
  "/.git",
  "/.github",
  "/docs",
  "/static",
  "/test_data",
  ".gitattributes",
  ".gitignore",
  "_typos.toml",
  "about.hbs",
  "about.toml",
  "deny.toml",
  "flake.lock",
  "flake.nix",
  "Makefile",
  "renovate.json",
  "rust-toolchain.toml",
  "rustfmt.toml",
]

[dependencies]
regex = "1.10.4"
colored = "3.0.0"
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
anyhow = "1.0.82"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
toml = "0.8.19"
serde = {version = "1.0.204", features = ["derive"]}
json-spanned-value = "0.2.2"
codespan = "0.12.0"
serde_json = "1.0.133"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
update-informer = { version = "1.1", default-features = true, features = ["github"] }
futures = "0.3"
syntect-tui = "3.0.5"
syntect = "5.2.0"
tree-sitter = "=0.24.4"
tree-sitter-just = "=0.1.0"
rust-embed = "8.5.0"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["serde", "v4"] }
pretty_assertions = "1.4.1"
