[package]
name = "fzf-make"
version = "0.67.0"
edition = "2024"
authors = ["kyu08"]
description = "A command line tool that executes commands using fuzzy finder with preview window for make, pnpm, yarn, just, and task."
license = "MIT"
repository = "https://github.com/kyu08/fzf-make"
exclude = [
  "/.devcontainer",
  "/.git",
  "/.github",
  "/docs",
  "/static",
  "/test_data",
  ".gitattributes",
  ".gitignore",
  "_typos.toml",
  "about.hbs",
  "about.toml",
  "deny.toml",
  "flake.lock",
  "flake.nix",
  "Makefile",
  "renovate.json",
  "rust-toolchain.toml",
  "rustfmt.toml",
]

[dependencies]
regex = "1.10.4"
colored = "3.0.0"
crossterm = "0.28.1"
fuzzy-matcher = "0.3.7"
anyhow = "1.0.82"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
toml = "0.9.0"
serde = {version = "1.0.204", features = ["derive"]}
json-spanned-value = "0.2.2"
codespan = "0.12.0"
serde_json = "1.0.133"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
update-informer = { version = "1.2.0", default-features = true, features = ["github"] }
futures = "0.3"
syntect-tui = "3.0.5"
syntect = "5.2.0"
tree-sitter = "=0.26.3"
tree-sitter-just = "=0.1.0"
rust-embed = "8.5.0"
time = { version = "0.3.44", features = ["formatting"] }
arboard = "3.6.1"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["serde", "v4"] }
pretty_assertions = "1.4.1"
